--- a/tests/cucumber.yaml
+++ b/tests/cucumber.yaml
@@ -1,5 +1,5 @@
 ---
-default: -p allure
-pretty: --format pretty
-html: --format html --out=log/features.html
+default: -p pretty -p html
+pretty: --format pretty -publish-quiet
+html: --format html -publish-quiet --out=log/features.html
 allure: --format pretty --format AllureCucumber::CucumberFormatter --out=log/allure-results
