--- a/tests/cucumber.yaml
+++ b/tests/cucumber.yaml
@@ -1,4 +1,4 @@
-default: -p json
+default: -p pretty -p json
 pretty: --format pretty --publish-quiet
 html: --format html --publish-quiet --out=results/features.html
 json: --format json --publish-quiet --out=results/cucumber.json
